--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -11,35 +11,99 @@
     background-color: #2f3e51;
     float: left;
     .side-header {
-      height: 82px;
+      height: 100px;
       background-color:#253141;
-      .side-header__box {
-        padding: 0 20px 0 20px;
-        line-height: 82px;
-        .side-header__box__user-name {
+      padding:0 20px;
+      &__box {
+        display: flex;
+        line-height: 100px;
+        &__user-name {
           font-size: 16px;
           font-weight: bold;
           color: #fff;
+          float: left;
+        }
+        &__new-group {
+          background-color: #fff;
+          float: right;
+        }
+        &__edit-user {
+          color: #fff;
+          float: right;
         }
       }
     }
     .groups {
-      padding: 0 20px 0 20px;
+      padding: 0 20px;
       .group {
         height: 71px;
-        .group__group-name{
+        &__group-name{
           font-size: 15px;
           font-weight: bold;
           color: #fff;
           margin-top:20px;
         }
-        .group__latest-message{
+        &__latest-message{
           font-size: 11px;
           font-weight: bold;
           color: #fff;
           margin: 5px 0 20px 0;
         }
       }
+    }
+  }
+  .chat-main {
+    height: 100vh;
+    width: calc(100vw - 300px);
+    float: left;
+    .main-header {
+      height: 100px;
+      padding:0 40px;
+      border-bottom: 1px solod #eeeeee;
+      &__left-box {
+        &__group-name {
+          font-size: 20px;
+          color: #333333;
+          padding: 35px 0 15px 0;
+        }
+        &__group-members {
+          font-size: 12px;
+          color: #999999;
+        }
+      }
+    }
+    .messages {
+      background-color:#fafafa;
+      height: calc(100vh - 100px - 90px);
+      padding: 46px 40px;
+      .message {
+        height: 105px;
+        padding-bottom: 40px;
+        &__upper-info{
+          display: inline-block;
+          &__talker {
+            font-size: 16px;
+            font-weight: bold;
+            color: #434A54;
+            margin-right: 10px;
+            float: left;
+          }
+          &__date {
+            font-size: 12px;
+            color: #999999;
+            float: left;
+          }
+        &__text{
+          font-size: 14px;
+          font-weight: #434A54;
+        }
+        }
+      }
+    }
+    .form {
+      height: 90px;
+      bottom: 0;
+      background-color: #ddd;
     }
   }
 }
