--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -24,6 +24,7 @@
         .main-header__left-box__group-members
           Members: edao takeda
       .main-header__edit-btn
+        Edit
     .messages
       .message
         .message__upper-info
