--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -11,11 +11,7 @@
         = link_to "###", class: "side-header__box__edit-user" do
           = fa_icon 'cog', class: "side-header__box__icon"
     .groups
-      .group
-        .group__group-name
-          sample
-        .group__latest-message
-          hello!
+      = render partial: "group" 
   .chat-main
     .main-header
       .main-header__left-box
