add message partial template

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -22,14 +22,7 @@
       .main-header__edit-btn
         Edit
     .messages
-      .message
-        .message__upper-info
-          .message__upper-info__talker
-            takeda
-          .message__upper-info__date
-            2019/09/30 20:38:50
-        .message__text
-          I'm hungry!
+      = render partial: "message"
     .form
       .form__input-box
         .form__input-box__contents
