--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -139,7 +139,7 @@
         height: 50px;
         width: 100px;
         background-color: #38AEF0;
-        color: #FFF;
+        color: #fff;
         font-weight: bold;
         text-align: center;
         line-height: 50px;
