edit submit button

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -140,13 +140,13 @@
         width: 100px;
         background-color: #38AEF0;
         color: #fff;
-        font-weight: bold;
         text-align: center;
         line-height: 50px;
         float: right;
         position: absolute;
         top: 20px;
         right: 40px;
+        border: solid 1px #d8d8d8;
         bottom: 0;
       }
     }
