change sample text

--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -18,7 +18,7 @@
         .main-header__left-box__group-name
           sample
         .main-header__left-box__group-members
-          Members: edao takeda
+          Members: user1 user2
       .main-header__edit-btn
         Edit
     .messages
