edit image submit button

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -132,6 +132,9 @@
             float: right;
             position: absolute;
             right: 10px;
+            &__select {
+              display: none;
+            }
           }
         }
       }
