--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,11 +5,11 @@
     .side-header
       .side-header__box
         .side-header__box__user-name
-          takeda
+          = current_user.name
         = link_to "###", class: "side-header__box__new-group" do
           = fa_icon 'edit', class: "side-header__box__icon"
-        = link_to "###", class: "side-header__box__edit-user" do
-          = fa_icon 'cog', class: "side-header__box__icon"
+        = link_to edit_user_path(current_user) do
+          = fa_icon 'cog', class: 'icon'
     .groups
       = render partial: "group" 
   .chat-main
