--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 @import "./reset";
+@import "config/colors";
 @import "./variable";
 @import "./mixin/chat-side-font";
 @import "./posts";
 @import "font-awesome";
 @import "modules/user";
+@import "modules/flash";
+@import "config/colors";
