--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,5 +1,3 @@
-.information-box
-  グループを作成しました
 .container
   .chat-side
     .side-header
@@ -7,9 +5,9 @@
         .side-header__box__user-name
           = current_user.name
         = link_to "###", class: "side-header__box__new-group" do
-          = fa_icon 'edit', class: "side-header__box__icon"
+          = fa_icon 'pencil-square-o', class: "side-header__box__icon"
         = link_to edit_user_path(current_user) do
-          = fa_icon 'cog', class: 'icon'
+          = fa_icon 'cog', class: "side-header__box__icon"
     .groups
       = render partial: "group" 
   .chat-main
