--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,7 +4,7 @@
       .side-header__box
         .side-header__box__user-name
           = current_user.name
-        = link_to "###", class: "side-header__box__new-group" do
+        = link_to new_group_path do
           = fa_icon 'pencil-square-o', class: "side-header__box__icon"
         = link_to edit_user_path(current_user) do
           = fa_icon 'cog', class: "side-header__box__icon"
