--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,15 +1,5 @@
 .container
-  .chat-side
-    .side-header
-      .side-header__box
-        .side-header__box__user-name
-          = current_user.name
-        = link_to new_group_path do
-          = fa_icon 'pencil-square-o', class: "side-header__box__icon"
-        = link_to edit_user_path(current_user) do
-          = fa_icon 'cog', class: "side-header__box__icon"
-    .groups
-      = render partial: "group" 
+  = render partial: "shared/side_bar"
   .chat-main
     .main-header
       .main-header__left-box
