--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -8,10 +8,10 @@
       = link_to edit_user_path(current_user) do
         = fa_icon 'cog', class: "side-header__box__icon"
   .groups
-    .group
-      - current_user.groups.each do |group|
-        = link_to '#' do
+    - current_user.groups.each do |group|
+      .group
+        = link_to group_messages_path(group) do
           .group__group-name
-            =group.name
+            = group.name
           .group__latest-message
             メッセージはまだありません。
