edit message function

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -117,6 +117,7 @@
             font-size: 16px;
             padding-left: 10px; 
             line-height: 50px;
+            width: calc(100vw - 300px - 195px);
             float: left;
           }
           &__image{
