--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -12,14 +12,25 @@
     .messages
       = render partial: "message"
     .form
-      .form__input-box
-        .form__input-box__contents
-          .form__input-box__contents__text
-            Type a message
-          %form{:class => "form__input-box__contents__image"}
-            %label
-              %span
-              = fa_icon 'image', class: "form__input-box__contents__icon"
-              %input{:type => "file", :class => "form__input-box__contents__image__select"}
-      .form__submit-btn
-        Send
+      = form_for [@group, @message] do |f|
+        .form__input-box
+          .form__input-box__contents
+            = f.text_field :text, class: "form__input-box__contents__text", placeholder: "Type a message"
+            .form__input-box__contents__image
+              = f.label :image do
+                = fa_icon 'image', class: "form__input-box__contents__icon"
+                = f.file_field :image, class: "form__input-box__contents__image__select"
+        = f.submit "Send", class: "form__submit-btn"
+
+    -# .form
+    -#   .form__input-box
+    -#     .form__input-box__contents
+    -#       .form__input-box__contents__text
+    -#         Type a message
+    -#       %form{:class => "form__input-box__contents__image"}
+    -#         %label
+    -#           %span
+    -#           = fa_icon 'image', class: "form__input-box__contents__icon"
+    -#           %input{:type => "file", :class => "form__input-box__contents__image__select"}
+    -#   .form__submit-btn
+    -#     Send
