--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -6,7 +6,7 @@
         .main-header__left-box__group-name
           = @group.name
         .main-header__left-box__group-members
-          Members: user1 user2
+          = @group.users.name
       .main-header__edit-btn
         Edit
     .messages
