add groups scroll

--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -25,6 +25,7 @@
     .groups {
       padding: 20px 20px 0;
       height: calc(100vh - 100px);
+      overflow: scroll;
       .group {
         height: 71px;
         &__group-name{
@@ -65,7 +66,6 @@
         margin: 28px 0;
         padding:0 20px;
         float: right;
-        border: solid 1px $mainBlueColor;
       }
     }
     .messages {
